--- a/igvc_self_drive_gazebo/package.xml
+++ b/igvc_self_drive_gazebo/package.xml
@@ -14,6 +14,8 @@
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>gazebo_ros</exec_depend>
 
+  <test_depend>roslaunch</test_depend>
+
   <export>
     <gazebo_ros gazebo_model_path="${prefix}/models/"/>
   </export>
